<resources>
    <string name="app_name">BANCOMAT Pay</string>
    <string name="confirm">CONFIRM</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="biometric_prompt_title">BANCOMAT Pay Authentication</string>
    <string name="enable_biometry_dialog_title">Set screen lock</string>
    <string name="enable_biometry_dialog_description">Access the settings for your device and set a security method for your screen lock. The security method is necessary to activate the BANCOMAT Pay app.</string>
    <string name="enable_biometry_dialog_confirm">Settings</string>
    <string name="enable_biometry_dialog_cancel">Delete</string>
    <string name="confirm_abort_dialog_title">Attention!</string>
    <string name="confirm_abort_dialog_description">Are you sure you wish to exit the service activation?</string>
    <string name="confirm_abort_dialog_confirm">Ok</string>
    <string name="confirm_abort_dialog_cancel">Delete</string>
    <string name="migration_need_dialog_title">App updates</string>
    <string name="migration_need_dialog_description">We have updated the app to make it safer. If you wish to continue using BANCOMAT Pay, enable the new authentication method by entering your old PIN</string>
    <string name="migration_need_dialog_confirm">Ok</string>
    <string name="device_not_secured_dialog_title">App updates</string>
    <string name="device_not_secured_dialog_description">We have updated the app to make it safer. If you wish to continue using BANCOMAT Pay, unlock the device.</string>
    <string name="device_not_secured_dialog_confirm">Settings</string>
    <string name="device_not_secured_dialog_cancel">Delete</string>
    <string name="view_pager_1">Activate BANCOMAT Pay to make payments, send and receive money, all with one touch</string>
    <string name="view_pager_2">To activate BANCOMAT Pay you must access your Bank\'s Home Banking or Mobile Banking.</string>
    <string name="view_pager_3">In just 30 seconds you\’ll be able to pay individuals, make online payments and payments in store</string>
    <string name="activation_button">ACTIVATE BANCOMAT Pay</string>
    <string name="bcmpay_activation_label">Activate BANCOMAT Pay</string>
    <string name="activation_act_code_title">Do you already have an activation code or QR Code for your Bank?</string>
    <string name="activation_act_code_description">Click on the button here below to enter the alphanumeric code or scan the QR Code</string>
    <string name="activation_act_code_button">ACTIVATION CODE</string>
    <string name="activable_bank_list_description">Discover with which bank you can activate the app</string>
    <string name="go_to_home_banking_description_1">Activate the BANCOMAT Pay app to make payments, send and receive money.</string>
    <string name="go_to_home_banking_sub_title_1">How to activate BANCOMAT Pay</string>
    <string name="go_to_home_banking_step_1">Access your Bank\'s Home Banking or Mobile Banking</string>
    <string name="go_to_home_banking_step_2">Follow the instructions to activate the BANCOMAT Pay service by accepting the terms and conditions</string>
    <string name="go_to_home_banking_step_3">Generate the activation code or the QR Code</string>
    <string name="go_to_home_banking_sub_title_2">Do you already have an activation code or QR Code?</string>
    <string name="activation_insert_otp_fragment_otp_sent">Verification Code Sended</string>
    <string name="home_banking_text_subtitle">Access your Home Banking and follow the instructions to activate the BANCOMAT Pay app: view the QR Code, click below and scan it</string>
    <string name="choose_bank_text">Choose which bank you want to activate the app with</string>
    <string name="search">Search…</string>
    <string name="discover_bcmpay_bank_label">Discover the banks offering the service with their app.</string>
    <string name="choose_bank_from_list">You can also activate the service through the listed banks, by accessing or downloading their app</string>
    <string name="choose_iban_text">Select the IBAN you want to set as the reference account. Remember, you can always change your selection in the Account Management section accessible from Profile on the menu</string>
    <string name="home_banking_text">Access your Home Banking and follow the instructions to activate the BANCOMAT Pay app</string>
    <string name="go_to_next_step_button">Next</string>
    <string name="qrcode_button_label">SCAN THE QR CODE</string>
    <string name="home_banking_text_2">Or enter the activation code from your Home Banking or Mobile Banking</string>
    <string name="insert_activation_code_button">Enter the code</string>
    <string name="choose_pin_label">Activate BANCOMAT Pay</string>
    <string name="choose_pin_text">Choose your PIN: do not use number sequences or 5 equal numbers</string>
    <string name="activation_code_label">Activation code</string>
    <string name="insert_your_phone_number">Enter your mobile phone number</string>
    <string name="insert_otp_text">Enter the verification code received by SMS at number %s</string>
    <string name="qr_code_activation_label">Activate with the QR Code</string>
    <string name="qr_code_activation_text">Scan the QR Code found on your Home Banking</string>
    <string name="activation_completed_title">BANCOMAT Pay activation completed</string>
    <string name="activation_completed_description">Now you can make payments, send and receive money, all with one touch</string>
    <string name="activate_fingerprint_label">Enable fingerprint to access and pay without using the BANCOMAT Pay PIN</string>
    <string name="activate_fingerprint_action">Configure fingerprint</string>
    <string name="common_check_fingerprint_authentication_locked">Too many attempts, try again later</string>
    <string name="bcm_pay_activation">Activate BANCOMAT Pay</string>
    <string name="insert_activation_code_description">Enter the activation code generated on your Home/Mobile Banking or scan the QR Code by clicking on the icon</string>
    <string name="activation_error_message">Activation failed. Try again</string>
    <string name="home_label">HOME</string>
    <string name="retry">Retry</string>
    <string name="activation_error_title">BANCOMAT Pay activation was not successful</string>
    <string name="activation_error_description">Tap to perform the activation</string>
    <string name="lost_pin_title">Forgotten your PIN?</string>
    <string name="repeat_pin">Repeat your PIN</string>
    <string name="repeat_pin_text">Repeat your PIN</string>
    <string name="pin_not_corresponding">The PIN does not match</string>
    <string name="insert_pin_title">Enter your PIN</string>
    <string name="send_new_otp_button">Send a new verification code</string>
    <string name="not_active_user_on_bank_chosen">Not active with %s.</string>
    <string name="not_active_user_on_bank_chosen_text">Check with your bank if you can enable the BANCOMAT Pay service, go back to the app and activate it</string>
    <string name="choose_valid_bank_fragment_text_1">Your number is not registered with %s.</string>
    <string name="choose_valid_bank_fragment_text_2">You can activate BANCOMAT Pay by selecting one of the banks listed below</string>
    <string name="choose_valid_bank_unsubscribed_fragment_text_1">Your number is not active with the selected bank.</string>
    <string name="choose_valid_bank_unsubscribed_fragment_text_2">You can activate BANCOMAT Pay by selecting one of the banks listed below</string>
    <string name="wrong_or_not_valid_qr_code">Captured QR code is incorrect or no longer valid</string>
    <string name="activation_home_banking_code_activation_error">The activation code or QR Code is no longer valid</string>
    <string name="settings_extended_disable_login_waring">By deactivating this function, some data relative to your profile will be accessible and visible to everyone</string>
    <string name="support_title">Help</string>
    <string name="support_description">Please contact us if you require any help using the BANCOMAT Pay app</string>
    <string name="change_pin_activity_old_pin">Enter your old PIN</string>
    <string name="change_pin_activity_new_pin">Enter your new PIN</string>
    <string name="change_pin_activity_repeat_pin">Repeat your PIN</string>
    <string name="change_pin_activity_pin_updated">PIN updated</string>
    <string name="lost_pin_description">Reactivate the BANCOMAT Pay app</string>
    <string name="change_pin_activity_new_pin_identical">The new PIN entered must be different from the old one</string>
    <string name="login_block_pin_title">Your PIN is locked</string>
    <string name="login_block_pin_label">You have entered an incorrect PIN too many times; reactivate the BANCOMAT Pay app</string>
    <string name="insert_pin_last_attempts">Incorrect PIN. You have %s attempts remaining</string>
    <string name="cancel_registration">Are you sure you want to exit the BANCOMAT Pay app activation process?</string>
    <string name="privacy_url">https://bancomat.it/it/bancomat/linformativa-privacy-ai-titolari-di-carte</string>
    <string name="terms_and_conditions_url">https://bancomat.it/it/bancomat/termini-e-condizioni-uso-della-app-bancomat-pay</string>
    <string name="support_label_terms_and_conditions">Terms and Conditions</string>
    <string name="support_label_privacy">Privacy Notice</string>
    <string name="version_app">App Version %s (%d)</string>
    <string name="support_email_body_your_message">Write your message here</string>
    <string name="common_check_fingerprint_status_idle">Access using your digital fingerprint</string>
    <string name="use_fingerprint_description_generic">Use fingerprint to confirm</string>
    <string name="write_otp_label">Enter the verification code</string>
    <string name="insert_otp_hint">Enter the verification code</string>
    <string name="activation_code_hint">Enter the activation code</string>
    <string name="init_error_message">The app has not been correctly initialized</string>
    <string name="invalid_pin_format">PIN not set because it does not meet requirements</string>
    <string name="fingerprint_modified_error_message">To confirm this transaction use the BANCOMAT Pay® PIN.\nHaving configured a new digital fingerprint on your device, you now need to update the BANCOMAT Pay® app from the Signing in settings – digital fingerprint menu</string>
    <string name="activation_insert_phone_fragment_error_wrong">The mobile number entered is incorrect. Retry</string>
    <string name="activation_insert_otp_fragment_error_wrong">The code is incorrect</string>
    <string name="activation_insert_otp_fragment_error_expired">The code is no longer valid. Request a new one.</string>
    <string name="activation_insert_otp_fragment_error_max_otp">You have requested a new verification code too many times. Try again later</string>
    <string name="settings_extended_change_pin">Change PIN</string>
    <string name="settings_extended_enable_login">Enable login</string>
    <string name="exit_app_error_message">For security reasons the app on this device will be reset. To continue using this device you must reactivate the app</string>
    <string name="settings_extended_enable_fingerprint">Enable fingerprint</string>
    <string name="set_fingerprint_success_title">Fingerprint is enabled</string>
    <string name="set_fingerprint_success_description">Now you can access the app and pay using fingerprint. You can always change your choice in the Settings section of the app accessible from the menu</string>
    <string name="lost_pin_button_label">ACTIVATE BANCOMAT Pay</string>
    <string name="no_pending_payments">There are no pending payment requests</string>
    <string name="one_shot_insert_otp_fragment_error_wrong">The collection verification code is incorrect</string>
</resources>