<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_background"
        android:orientation="vertical">

        <it.bancomatpay.sdkui.widgets.ToolbarSimple
            android:id="@+id/toolbar_simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:centerImg="@drawable/empty"
            app:leftImg="@drawable/back_blue" />

        <TextView
            style="@style/TextGenericTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bcmpay_activation_label" />

        <TextView
            style="@style/TextDescriptionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:lineSpacingMultiplier="1.2"
            android:textColor="@color/text_color_bcm"
            android:text="@string/go_to_home_banking_description_1"
             />

        <TextView
            style="@style/TextTutorialDescriptionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/go_to_home_banking_sub_title_1"
            android:textColor="@color/text_color_bcm" />

        <LinearLayout
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginEnd="@dimen/size_15"
                style="@style/TextDescriptionStyle"
                android:lineSpacingMultiplier="1.2"
                android:textColor="@color/text_color_bcm"
                android:text="1."
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                style="@style/TextDescriptionStyle"
                android:text="@string/go_to_home_banking_step_1"
                android:lineSpacingMultiplier="1.2"
                android:textColor="@color/text_color_bcm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/TextDescriptionStyle"
                android:text="2."
                android:lineSpacingMultiplier="1.2"
                android:textColor="@color/text_color_bcm"
                android:layout_marginEnd="@dimen/size_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                style="@style/TextDescriptionStyle"
                android:lineSpacingMultiplier="1.2"
                android:textColor="@color/text_color_bcm"
                android:text="@string/go_to_home_banking_step_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/TextDescriptionStyle"
                android:text="3."
                android:lineSpacingMultiplier="1.2"
                android:textColor="@color/text_color_bcm"
                android:layout_marginEnd="@dimen/size_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                style="@style/TextDescriptionStyle"
                android:lineSpacingMultiplier="1.2"
                android:textColor="@color/text_color_bcm"
                android:text="@string/go_to_home_banking_step_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <View
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:src="@drawable/tutorial_attivazione"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>


        <View
            android:layout_marginVertical="@dimen/size_15"
            android:layout_marginStart="@dimen/size_20"
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            style="@style/TextTutorialDescriptionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/go_to_home_banking_sub_title_2"
            android:textColor="@color/text_color_bcm" />

        <TextView
            style="@style/TextDescriptionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/size_25"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/activation_act_code_description"
            android:textColor="@color/text_color_bcm" />

        <LinearLayout
            android:layout_marginBottom="@dimen/size_25"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/insert_code_button"
            style="@style/CustomBigButton">
            <TextView
                style="@style/CustomBigButton"
                android:text="@string/activation_act_code_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                app:tint="@color/white_background"
                android:src="@drawable/bottone_codice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

</layout>