<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/contacts_layout_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_background"
        android:orientation="vertical">

        <TextView
            style="@style/TextGenericTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:fontFamily="@font/lato_text_semibold"
            android:text="@string/bcmpay_activation_label" />

        <TextView
            android:id="@+id/home_banking_text"
            style="@style/TextDescriptionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="4dp"
            android:lineSpacingMultiplier="1.2"
            android:textColor="@color/text_color_bcm" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/open_qrcode_camera"
            style="@style/CustomBigButton"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/qrcode_button_label"
            android:visibility="visible" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="15dp"
            android:alpha=".6"
            android:src="@drawable/bank_item_divider" />

        <TextView
            style="@style/TextDescriptionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="4dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/home_banking_text_2"
            android:textColor="@color/text_color_bcm" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/insert_home_banking"
            style="@style/CustomBigButton"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/insert_activation_code_button"
            android:visibility="visible" />

    </LinearLayout>

</layout>
