<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            style="@style/ListLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/activation_error_title" />

        <TextView
            style="@style/TextDescriptionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            android:lineSpacingMultiplier="1.2"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/activation_error_message"
            android:textColor="@color/text_generic_color" />

        <View
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/illustration_activation_ko" />

        <View
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_retry_sdk_activation"
            style="@style/CustomBigButton"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/retry" />

    </LinearLayout>

</layout>