<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            style="@style/TextGenericTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bcmpay_activation_label" />

        <TextView
            style="@style/TextDescriptionStyle"
            android:id="@+id/choose_valid_bank_label_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:lineSpacingMultiplier="1.2"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/choose_valid_bank_fragment_text_1"
            android:textColor="@color/text_color_bcm" />

        <TextView
            style="@style/TextDescriptionStyle"
            android:id="@+id/choose_valid_bank_label_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:lineSpacingMultiplier="1.2"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/choose_valid_bank_fragment_text_2"
            android:textColor="@color/text_color_bcm" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activable_bank_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp"
            android:scrollbars="vertical" />

    </LinearLayout>

</layout>