<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <it.bancomatpay.sdkui.widgets.ToolbarSimple
            android:id="@+id/toolbar_simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:centerImg="@drawable/ico_logo_bcm_rubrica"
            app:leftImg="@drawable/back_blue" />

        <TextView
            android:id="@+id/text_lost_pin_title"
            style="@style/ListLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/lost_pin_title" />

        <TextView
            android:id="@+id/text_lost_pin_label"
            style="@style/TextDescriptionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:lineSpacingMultiplier="1.2"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/lost_pin_description"
            android:textColor="@color/text_generic_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_activate_bcmpay"
                style="@style/CustomBigButton"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/lost_pin_button_label"
                android:textAllCaps="false" />

        </RelativeLayout>

    </LinearLayout>

</layout>