<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <it.bancomatpay.sdkui.widgets.ToolbarSimple
            android:id="@+id/toolbar_simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:centerImg="@drawable/ico_logo_bcm_rubrica"
            app:rightImg="@drawable/close_azur" />

        <TextView
            style="@style/ListLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/activation_error_title" />

        <TextView
            style="@style/TextDescriptionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:lineSpacingMultiplier="1.2"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/activation_error_description"
            android:textColor="@color/text_generic_color" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:src="@drawable/illustration_activation_ko" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_retry_sdk_activation"
                style="@style/CustomBigButton"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/retry" />

        </RelativeLayout>

    </LinearLayout>

</layout>